# Buttons_VSS

./: CMakeLists.txt  Test_Interface.pro  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
